fixed some spacing issuses

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@
 
 .jumbotron {
     padding: 5rem;
-    margin-top: 35rem;
+    margin-top: 20rem;
     /* height: 100vh; */
     border: orange solid 10px;
     text-align: center;
